# lttng-ust

./: .classpath  .editorconfig  .gitignore  .gitreview  .project  CONTRIBUTING.md  COPYING  ChangeLog  CodingStyle  CodingStyle.md  LICENSE  Makefile  Makefile.am  README  README.md  TODO  bootstrap  configure.ac  lgpl-relicensing.txt  libust-initializer.c  libust-initializer.h  libust.ldscript.in  lttng-ust.pc.in  ust.pc.in  usttrace
hello/: Makefile  Makefile.am  hello.c  marker-control.c  run  serialize.c  tp.h
include/: Makefile.am  helper.h  lttng-sessiond-comm.h  lttng-ust-comm.h  share.h  ust-bitfield.h  ust-comm.h  ust-compat.h  ust-context-provider.h  ust-dlfcn.h  ust-dynamic-type.h  ust-elf.h  ust-fd.h  ust-helper.h  ust-share.h  ust-snprintf.h  ust-tid.h  ust_snprintf.h  usterr-signal-safe.h  usterr.h  usterr_signal_safe.h
include/lttng/: align.h  bitfield.h  bitmap.h  bug.h  clock.h  compat.h  config.h.in  core.h  counter-config.h  lttng-ust-tracef.h  lttng-ust-tracelog.h  ringbuffer-abi.h  ringbuffer-config.h  ringbuffer-context.h  share.h  statedump-notifier.h  stringify.h  tracef.h  tracelog.h  tracepoint-event.h  tracepoint-internal.h  tracepoint-rcu.h  tracepoint-types.h  tracepoint.h  ust-abi-old.h  ust-abi.h  ust-align.h  ust-api-compat.h  ust-arch.h  ust-bug.h  ust-cancelstate.h  ust-clock.h  ust-comm.h  ust-common.h  ust-compiler.h  ust-config.h.in  ust-context-provider.h  ust-ctl.h  ust-dlfcn.h  ust-dynamic-type.h  (+24 more)
include/ust/: align.h  clock.h  core.h  define_trace.h  kernelcompat.h  lttng-events.h  lttng-tracepoint-event-reset.h  lttng-tracepoint-event.h  lttng-tracer.h  lttng-ust-abi.h  lttng-ust-comm.h  lttng-ust-ctl.h  marker-internal.h  marker.h  probe-internal.h  probe.h  processor.h  ringbuffer-abi.h  ringbuffer-config.h  share.h  tracectl.h  tracepoint-event.h  tracepoint-internal.h  tracepoint.h  tracepoint_event.h  type-serializer.h  ust.h  ust_trace.h  ustcmd.h  ustconsumer.h  ustctl.h  ustd.h  usterr-signal-safe.h  wait.h
java/: Makefile.am  README  UST.c  ust_java.h
libcounter/: Makefile.am  counter-api.h  counter-config.h  counter-internal.h  counter-types.h  counter.c  counter.h  shm.c  shm.h  shm_internal.h  shm_types.h  smp.c  smp.h
liblttng-ust/: Makefile.am  bytecode.h  clock.h  compat.h  compat_futex.c  context-internal.h  context-provider-internal.h  creds.h  error.h  event-notifier-notification.c  filter-bytecode.h  futex.h  getenv.c  getenv.h  jhash.h  ltt-context.c  ltt-events.c  ltt-probes.c  ltt-ring-buffer-client-discard.c  ltt-ring-buffer-client-overwrite.c  ltt-ring-buffer-client.h  ltt-ring-buffer-metadata-client.c  ltt-ring-buffer-metadata-client.h  ltt-tracer-core.h  ltt-tracer.h  lttng-bytecode-interpreter.c  lttng-bytecode-specialize.c  lttng-bytecode-validator.c  lttng-bytecode.c  lttng-bytecode.h  lttng-clock.c  lttng-context-cgroup-ns.c  lttng-context-cpu-id.c  lttng-context-ip.c  lttng-context-ipc-ns.c  lttng-context-mnt-ns.c  lttng-context-net-ns.c  lttng-context-perf-counters.c  lttng-context-pid-ns.c  lttng-context-procname.c  (+74 more)
liblttng-ust-baddr/: Makefile.am  lttng-ust-baddr.c  lttng-ust-baddr.h  ust_baddr.c  ust_baddr.h  ust_baddr_statedump.c
liblttng-ust-ctl/: Makefile.am  ust-ctl-private.h  ustctl.c
liblttng-ust-cyg-profile/: Makefile.am  lttng-ust-cyg-profile-fast.c  lttng-ust-cyg-profile-fast.h  lttng-ust-cyg-profile.c  lttng-ust-cyg-profile.h  run  run-fast
liblttng-ust-dl/: Makefile.am  lttng-ust-dl.c  ust_baddr.c  ust_baddr.h  ust_dl.c  ust_dl.h  ustdl.c
liblttng-ust-fd/: Makefile.am  lttng-ust-fd.c
liblttng-ust-fork/: Makefile.am  ustfork.c
liblttng-ust-java/: .gitignore  LTTNG_UST.c  LTTNG_UST.java  LTTngUst.c  LTTngUst.java  Makefile.am  README  UST.java  lttng_ust_java.h
liblttng-ust-jul/: LTTngUst.c  Makefile.am  README  lttng_ust_jul.h
liblttng-ust-libc/: Makefile.am  README  ust_libc.h
liblttng-ust-libc-wrapper/: Makefile.am  lttng-ust-malloc.c  lttng-ust-pthread.c  run  ust_libc.h  ust_pthread.h
liblttng-ust-python-agent/: Makefile.am  __init__.py.in  lttng_agent.py.in  lttng_ust_python.c  lttng_ust_python.h
liblttng-ust-python-agent/lttngust/: cmd.py  (+3 more)
libmarkers/: Makefile  Makefile.am  jhash.h  marker.c  marker.h  poison.h  rcupdate.h  tracepoint.c  tracepoint.h
libringbuffer/: Makefile.am  api.h  backend.h  backend_internal.h  backend_types.h  config.h  frontend.h  frontend_api.h  frontend_internal.h  frontend_types.h  getcpu.h  iterator.h  mmap.h  nohz.h  rb-init.h  ring_buffer_abi.c  ring_buffer_backend.c  ring_buffer_frontend.c  ring_buffer_iterator.c  ring_buffer_vfs.c  ringbuffer-config.h  shm.c  shm.h  shm_internal.h  shm_types.h  smp.c  smp.h  tlsfixup.h  vatomic.h  vfs.h
libtracectl/: Makefile  Makefile.am  localerr.h  marker-control.c  marker-control.h  tracectl.c
libust/: Makefile.am  buffer.h  buffers.c  buffers.h  channels.c  channels.h  header-inline.h  immediate.h  ltt-context.c  ltt-events.c  ltt-events.h  ltt-probes.c  ltt-ring-buffer-client-discard.c  ltt-ring-buffer-client-overwrite.c  ltt-ring-buffer-client.h  ltt-ring-buffer-metadata-client.c  ltt-ring-buffer-metadata-client.h  ltt-tracer-core.h  ltt-tracer.h  lttng-context-procname.c  lttng-context-pthread-id.c  lttng-context-vpid.c  lttng-context-vtid.c  lttng-ust-abi.c  lttng-ust-comm.c  marker-control.c  marker-control.h  marker.c  marker.h  registers.h  relay.c  relay.h  serialize.c  trace_event.c  tracectl.c  tracepoint.c  tracepoint.h  tracer.c  tracer.h  tracerconst.h  (+5 more)
libustcmd/: Makefile.am  README  ustcmd.c  ustcmd.h
libustcomm/: Makefile.am  multipoll.c  multipoll.h  ustcomm.c  ustcomm.h
libustconsumer/: Makefile.am  libustconsumer.c  lowlevel.c  lowlevel.h
libustctl/: Makefile.am  README  libustctl.c  ustctl.c
libustd/: Makefile.am  libustd.c  libustd.h  lowlevel.c  lowlevel.h
python-lttngust/: Makefile.am  setup.py.in
snprintf/: Makefile.am  README  core.c  fflush.c  fileext.h  floatio.h  fvwrite.c  fvwrite.h  local.h  mbrtowc_sb.c  patient_write.c  prog.c  snprintf.c  various.h  vfprintf.c  wcio.h  wsetup.c
src/: Makefile.am  lttng-ust-ctl.pc.in  lttng-ust.pc.in
(+1068 files in other folders)
